2006-08-13  Michael Schlenker <mic42@users.sourceforge.net>
	
	* asn.tcl : Fixed Tcllib Bug [1539479]. Package version 
	  asn.test: raised to 0.5.2. Added smoketest for the bug.
	  Thanks to Pierre David for finding this.

2006-03-22  Michael Schlenker <mic42@users.sourceforge.net>
	
	* asn.tcl:	Removed dependency on the log package to fix
	  Tcllib Bug [1408807]. Package version raised to 0.5.1.

2006-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* asn.test: Fixed use of duplicate test names.

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* asn.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* asn.test: Hooked into the new common test support code.

2006-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* asn.man: Reworked the documentation of the new commands a bit,
	  and fixed some typos in words and use of the doctools commands.

2006-01-16  Michael Schlenker <mic42@users.sourceforge.net>
	
	* asn.tcl:	Added new decoders for BMPString
	  asn.man:	and UTF8String. New convenience
	  asn.test:     function asnGetString. Added tests
	  pkgIndex.tcl: for OIDs and the new string functions.           
			Bugfix for wrong tag in asnNumericString.
			Version increased to 0.5.
			Big thanks to Victor Wagner <vitus@45.free.net)
			for the patches.
			
2006-01-05  Michael Schlenker <mic42@users.sourceforge.net>
	
	* asn.tcl: 	Fixed Tcllib Bug #1393804. Stupid typo.
	  asn.test:	Added some tests for asnPeekByte, 
	                asnGetByte, asnGetBytes.
	  pkgIndex.tcl: Version increased to 0.4.2           

2005-12-30  Michael Schlenker <mic42@users.sourceforge.net>
	
	* asn.tcl: 	Applied patch from Tcllib Bug #1391776 to 
			create better (shorter) encodings for OIDs.
	  pkgIndex.tcl: Version number increased to 0.4.1
	
2005-10-21  Andreas Kupries <andreask@activestate.com>

	* asn.test: Fixed typos, new and old.
